2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation.
	
	* tools/bin/slc.in: Do not document gcc flags which have unchanged
	behavior. Mention explicitly the status of -x and
	-nostdinc. Properly explain stages in the introduction. List input
	file types with behavior in full.

2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make assembly optimization controllable.

	The following flags are introduced: `-fasmopt' (counterpart
	`-fno-asmopt') enable or disable assembly optimization. Any flags
	of the form `-fasmopt-NAME' (counterpart `-fno-asmopt-NAME')
	enable or disable a specific optimization. `-fasmopt-all' and
	`-fasmopt-none' are also recognized.
 	
	* tools/bin/slc.in: Capture command-line arguments `-fasmopt',
	`-fno-asmopt', `-fasmopt-*' and `-fno-asmopt-*'. Pass them to
	`filter2' accordingly. Document them.

	* tools/bin/spp (filter2): Recognize `asmopt' options from slc and
	run optimization stages conditionnally.

2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.	
	
	* tools/lib/t-utc0/slimpl.m4: Annotate the index register with an
	assembly comment, so that its special role can be picked up later
	by `spp'.

2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/slc.in: `-save-temps' implies `-t .', as for `gcc'.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.
	
	* tools/lib/t-utc0/slimpl.m4: Use type `long' for thread indexes.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Restore ability to process multiple input files.

	When `slc' was made more robust to special characters, a
	regression was introduced. This is now fixed.

	* tools/bin/slc.in: `"${inputs[@]}"', not `$inputs'.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix example.

	* programs/demo/keyblit.c: Place `sl_enddef' properly.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.
